@@ -2,6 +2,10 @@ Revision history for Perl extension At.pm
 
 {{$NEXT}}
 
+    - Reorganize methods with more than one optional parameter to accept a hash
+    - Update according to lexicon changes in bluesky-social/atproto@e4ec7af
+       - add date range and comment filter to queryModerationEvents endpoint
+
 0.15 2024-01-27T23:37:51Z
 
     - Minor bug sweep as I work on a functioning client
